--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.13",
+    "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
+    "store": "^2.0.12",
     "svg-sprite-loader": "^6.0.11",
     "svgo-loader": "^4.0.0",
     "vue": "^2.6.11",
