--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VUE_APP_BASE_URL = /ncds-yq-mobile-api
-VUE_APP_BASE_HTTP = https://test.yuanxinbaoxian.com
+VUE_APP_BASE_URL = /ncds-yq-admin-api
+VUE_APP_BASE_HTTP = http://test.yuanxinbaoxian.com/
