--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-plugin-transform-remove-console": "^6.9.4",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.13",
+    "js-cookie": "^3.0.1",
     "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
     "store": "^2.0.12",
