--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build:prod": "vue-cli-service build --mode prod",
     "new:comp": "node ./scripts/generateComponent",
     "new:view": "node ./scripts/generateView",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "stylelint:fix": "stylelint **/*.{vue,css,scss}  --fix",
+    "format:fix": "npm run stylelint:fix && npm run lint"
   },
   "dependencies": {
     "axios": "^1.3.4",
@@ -44,6 +46,15 @@
     "image-webpack-loader": "^8.1.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
+    "stylelint": "^13.8.0",
+    "stylelint-config-rational-order": "^0.1.2",
+    "stylelint-config-standard": "^20.0.0",
+    "stylelint-declaration-block-no-ignored-properties": "^2.3.0",
+    "stylelint-order": "^4.1.0",
     "vue-template-compiler": "^2.6.11"
   }
 }
+
+
+
+
