--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
     "build:prod": "vue-cli-service build --mode prod",
     "new:comp": "node ./scripts/generateComponent",
     "new:view": "node ./scripts/generateView",
-    "lint": "vue-cli-service lint",
-    "stylelint:fix": "stylelint **/*.{vue,css,scss}  --fix",
-    "format:fix": "npm run stylelint:fix && npm run lint"
+    "lint": "vue-cli-service lint && stylelint **/*.{vue,css,scss}  --fix",
+    "prepare": "husky install"
   },
   "dependencies": {
     "axios": "^1.3.4",
@@ -43,6 +42,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^6.2.2",
+    "husky": "^8.0.3",
     "image-webpack-loader": "^8.1.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
@@ -54,7 +54,3 @@
     "vue-template-compiler": "^2.6.11"
   }
 }
-
-
-
-
