--- a/package.json
+++ b/package.json
@@ -11,6 +11,14 @@
     "lint": "vue-cli-service lint && stylelint **/*.{vue,css,scss}  --fix",
     "prepare": "husky install"
   },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,vue}": [
+      "eslint --fix"
+    ],
+    "*.{vue,css,scss}": [
+      "stylelint --fix"
+    ]
+  },
   "dependencies": {
     "axios": "^1.3.4",
     "babel-plugin-transform-remove-console": "^6.9.4",
@@ -44,6 +52,7 @@
     "eslint-plugin-vue": "^6.2.2",
     "husky": "^8.0.3",
     "image-webpack-loader": "^8.1.0",
+    "lint-staged": "^13.2.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
     "stylelint": "^13.8.0",
