--- a/package.json
+++ b/package.json
@@ -8,7 +8,16 @@
     "build:prod": "vue-cli-service build --mode prod",
     "new:comp": "node ./scripts/generateComponent",
     "new:view": "node ./scripts/generateView",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint && stylelint **/*.{vue,css,scss}  --fix",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,vue}": [
+      "eslint --fix"
+    ],
+    "*.{vue,css,scss}": [
+      "stylelint --fix"
+    ]
   },
   "dependencies": {
     "axios": "^1.3.4",
@@ -37,8 +46,15 @@
     "compression-webpack-plugin": "^6.1.1",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.1",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
+    "stylelint": "^13.13.1",
+    "stylelint-config-rational-order": "^0.1.2",
+    "stylelint-config-standard": "^20.0.0",
+    "stylelint-declaration-block-no-ignored-properties": "^2.7.0",
+    "stylelint-order": "^4.1.0",
     "vue-template-compiler": "^2.6.11"
   }
 }
