--- a/package.json
+++ b/package.json
@@ -41,12 +41,15 @@
     "@vue/cli-plugin-router": "~4.5.13",
     "@vue/cli-plugin-vuex": "~4.5.13",
     "@vue/cli-service": "~4.5.13",
+    "@vue/eslint-config-prettier": "^6.0.0",
     "babel-eslint": "^10.1.0",
     "babel-plugin-component": "^1.1.1",
     "compression-webpack-plugin": "^6.1.1",
     "eslint": "^6.7.2",
+    "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^6.2.2",
     "husky": "^8.0.3",
+    "image-webpack-loader": "^8.1.0",
     "lint-staged": "^13.2.1",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
@@ -55,8 +58,6 @@
     "stylelint-config-standard": "^20.0.0",
     "stylelint-declaration-block-no-ignored-properties": "^2.7.0",
     "stylelint-order": "^4.1.0",
-    "vue-template-compiler": "^2.6.11",
-    "@vue/eslint-config-prettier": "^6.0.0",
-    "eslint-plugin-prettier": "^3.3.1"
+    "vue-template-compiler": "^2.6.11"
   }
 }
