--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "new:comp": "node ./scripts/generateComponent",
     "new:view": "node ./scripts/generateView",
     "lint": "vue-cli-service lint && stylelint **/*.{vue,css,scss}  --fix",
+    "commit": "git-cz",
     "prepare": "husky install"
   },
   "lint-staged": {
@@ -18,6 +19,11 @@
     "*.{vue,css,scss}": [
       "stylelint --fix"
     ]
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
   },
   "dependencies": {
     "axios": "^1.3.4",
@@ -44,7 +50,9 @@
     "@vue/eslint-config-prettier": "^6.0.0",
     "babel-eslint": "^10.1.0",
     "babel-plugin-component": "^1.1.1",
+    "commitizen": "^4.3.0",
     "compression-webpack-plugin": "^6.1.1",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^6.2.2",
