--- a/package.json
+++ b/package.json
@@ -28,6 +28,11 @@
       "config": ".cz-config.js"
     }
   },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
   "dependencies": {
     "axios": "^1.3.4",
     "babel-plugin-transform-remove-console": "^6.9.4",
