--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "new:comp": "node ./scripts/generateComponent",
     "new:view": "node ./scripts/generateView",
     "lint": "vue-cli-service lint && stylelint **/*.{vue,css,scss}  --fix",
-    "commit": "git-cz",
+    "commit": "cz",
     "prepare": "husky install"
   },
   "lint-staged": {
@@ -19,6 +19,11 @@
     "*.{vue,css,scss}": [
       "stylelint --fix"
     ]
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
   },
   "dependencies": {
     "axios": "^1.3.4",
