--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "config": {
     "commitizen": {
-      "path": "cz-conventional-changelog"
+      "path": "git-cz"
     }
   },
   "dependencies": {
@@ -56,6 +56,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^6.2.2",
+    "git-cz": "^4.9.0",
     "husky": "^8.0.3",
     "image-webpack-loader": "^8.1.0",
     "lint-staged": "^13.2.1",
