--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "config": {
     "commitizen": {
-      "path": "git-cz"
+      "path": "node_modules/cz-customizable"
     }
   },
   "dependencies": {
@@ -53,6 +53,7 @@
     "commitizen": "^4.3.0",
     "compression-webpack-plugin": "^6.1.1",
     "cz-conventional-changelog": "^3.3.0",
+    "cz-customizable": "^7.0.0",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^6.2.2",
