--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "vuex": "^3.4.0"
   },
   "devDependencies": {
+    "@commitlint/config-conventional": "^17.6.1",
     "@fullhuman/postcss-purgecss": "~3.0.0",
     "@vue/cli-plugin-babel": "~4.5.13",
     "@vue/cli-plugin-eslint": "~4.5.13",
@@ -51,6 +52,7 @@
     "babel-eslint": "^10.1.0",
     "babel-plugin-component": "^1.1.1",
     "commitizen": "^4.3.0",
+    "commitlint": "^17.6.1",
     "compression-webpack-plugin": "^6.1.1",
     "cz-conventional-changelog": "^3.3.0",
     "cz-customizable": "^7.0.0",
