--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ad",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "dev": "vue-cli-service serve --mode dev",
@@ -10,6 +10,7 @@
     "new:view": "node ./scripts/generateView",
     "lint": "vue-cli-service lint && stylelint **/*.{vue,css,scss}  --fix",
     "commit": "cz",
+    "release": "standard-version",
     "prepare": "husky install"
   },
   "lint-staged": {
@@ -65,6 +66,7 @@
     "lint-staged": "^13.2.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
+    "standard-version": "^9.5.0",
     "stylelint": "^13.8.0",
     "stylelint-config-rational-order": "^0.1.2",
     "stylelint-config-standard": "^20.0.0",
